--- a/PartialView/PartialView.csproj
+++ b/PartialView/PartialView.csproj
@@ -140,11 +140,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\PublishProfiles\A.pubxml" />
-    <None Include="Properties\PublishProfiles\PView2.pubxml" />
+    <Content Include="Areas\PartialView\Views\PartialView\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\PartialView\Views\PartialView\Index.cshtml" />
+    <None Include="Properties\PublishProfiles\PartialView.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
