--- a/Blog.Admin/Web.config
+++ b/Blog.Admin/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="mailAccount" value="lchoang1995@gmail.com" />
+    <add key="mailPassword" value="Thienan@111" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
@@ -68,7 +70,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -90,6 +92,10 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SendGrid.CSharp.HTTP.Client" publicKeyToken="79219bf4e5ecaaca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -104,4 +110,24 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="ASPSMSX2Soap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ASPSMSX2Soap1" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="ASPSMSX2Soap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://webservice.aspsms.com/aspsmsx2.asmx" binding="basicHttpBinding" bindingConfiguration="ASPSMSX2Soap" contract="ASPSMSX2.ASPSMSX2Soap" name="ASPSMSX2Soap" />
+      <endpoint address="https://webservice.aspsms.com/aspsmsx2.asmx" binding="customBinding" bindingConfiguration="ASPSMSX2Soap12" contract="ASPSMSX2.ASPSMSX2Soap" name="ASPSMSX2Soap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
