--- a/Blog.Admin/packages.config
+++ b/Blog.Admin/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="JWT" version="1.3.4" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net45" />
@@ -41,11 +42,12 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Sendgrid" version="7.0.6" targetFramework="net45" />
   <package id="SendGrid.CSharp.HTTP.Client" version="3.0.0" targetFramework="net45" />
-  <package id="SendGrid.Net40" version="5.1.0.0" targetFramework="net45" />
-  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.3.2" targetFramework="net45" />
+  <package id="Twilio" version="5.8.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
