--- a/Blog.Admin/ApplicationInsights.config
+++ b/Blog.Admin/ApplicationInsights.config
@@ -31,7 +31,8 @@
 		<Add Type="Microsoft.ApplicationInsights.Web.RequestTrackingTelemetryModule, Microsoft.AI.Web">
 			<Handlers>
 				<!-- 
-        Add entries here to filter out additional handlers: 
+        Add 
+        here to filter out additional handlers: 
         
         NOTE: handler configuration will be lost upon NuGet upgrade.
         -->
