--- a/Blog.Users/Blog.Users.csproj
+++ b/Blog.Users/Blog.Users.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Blog\Views\Users\Users.cshtml" />
+    <Content Include="Scripts\Blog\users.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Blog\Models\" />
